src/objects/MDM_ManufacturerProductCategory__c.object
<CustomObject>
    <description>ManufacturerProductCategory</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <description>EnterpriseID</description>
        <inlineHelpText>EnterpriseID</inlineHelpText>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManufacturerProductCategoryID__c</fullName>
        <description>This ID will be EnterpriseID.Whereas Data steward has control over the org refresh.</description>
        <displayFormat>MC-{000000000}</displayFormat>
        <inlineHelpText>This ID will be EnterpriseID.Whereas Data steward has control over the org refresh.</inlineHelpText>
        <label>ManufacturerProductCategoryID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Enterprise_ID__c</fullName>
        <description>Manufacturer Enterprise ID</description>
        <formula>Manufacturer__r.EnterpriseID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manufacturer Enterprise ID</inlineHelpText>
        <label>Manufacturer Enterprise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product Manufacturer</description>
        <inlineHelpText>Product Manufacturer</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MDM_Manufacturer__c.EnterpriseID__c</field>
                <operation>startsWith</operation>
                <value>MG-</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MDM_Manufacturer__c</referenceTo>
        <relationshipLabel>ManufacturerProductCategories</relationshipLabel>
        <relationshipName>ManufacturerProductCategories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>ManufacturerProductCategory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ManufacturerProductCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManufacturerProductCategories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>